Added game story intro, worked on menu and quit functionalities Ticket 253